...
    </data>

<android.support.v7.widget.CardView

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/container_item"
    android:layout_marginTop="5dp"
    android:onClick="@{viewModel::onClickView}"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    card_view:cardCornerRadius="5dp">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent">
        <ImageView android:layout_width="@dimen/image_width"
                   android:layout_margin="@dimen/activity_horizontal_margin"
                   android:id="@+id/iv_avatar"
                   app:imageUrl="@{viewModel.gameData.name}"
                   android:layout_height="@dimen/image_width"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
